--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
+      <button class="sidebar-toggle" id="sidebarToggle">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path id="toggleIcon" d="M15 18l-6-6 6-6" />
+        </svg>
+      </button>
+
       <div class="logo">Transcriber</div>
       <div class="nav-item active" onclick="showSection('upload')">Upload</div>
     </div>
-
     <div class="main">
       <div class="container">
         <div class="section active" id="uploadSection">
