--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transcription Tool</title>
+    <title>Transcription Tool for Team Nick Grayl</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         </svg>
       </button>
 
-      <div class="logo">Transcriber</div>
+      <div class="logo">VS3 Transcriber</div>
       <div class="nav-item active" onclick="showSection('upload')">Upload</div>
       <!-- <div class="nav-item" onclick="showSection('dashboard')">Dashboard</div> -->
       <div class="sidebar-history">
