adding some style

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
         </svg>
       </button>
 
-      <div class="logo">VS3 Transcriber</div>
-      <div class="nav-item active" onclick="showSection('upload')">Upload</div>
+      <div class="logo" onclick="showSection('upload')" style="cursor: pointer">
+        VS3 Transcriber
+      </div>
+      <div
+        class="nav-item active"
+        onclick="showSection('upload')"
+        id="upload-nav"
+      >
+        Upload
+      </div>
       <!-- <div class="nav-item" onclick="showSection('dashboard')">Dashboard</div> -->
       <div class="sidebar-history">
         <h3 class="sidebar-title">Recent Transcripts</h3>
