--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                     >
                       Copy as Markdown
                     </button>
-                    <button
+                    <!-- <button
                       class="btn btn-secondary"
                       onclick="copyToClipboard('html')"
                     >
                       Copy as HTML
-                    </button>
+                    </button> -->
                   </div>
                 </div>
                 <div id="transcription"></div>
